--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "eslint": "eslint src/",
     "test": "npm run eslint"
+    "build": "webpack --mode development"
   },
   "devDependencies": {
     "eslint": "7.32.0",
