--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Файлы и папки операционной системы
 .DS_Store
 Thumbs.db
-
 # Файлы редактора
 .idea
 *.sublime*
 .vscode
-
 # Вспомогательные файлы
 *.log*
 node_modules/
 
-# Собранные файлы (допишите самостоятельно)
+# Собранные файлы
+public/bundle.js
+public/bundle.js.map
