--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Проект «Большое путешествие» от HTML Academy",
   "scripts": {
     "eslint": "eslint src/",
-    "test": "npm run eslint"
+    "test": "npm run eslint",
     "build": "webpack --mode development",
     "start": "webpack serve --mode development --open"
   },
