--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   },
   "engines": {
     "node": "16"
+  },
+  "dependencies": {
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
